--- a/shop-desktop/shop-desktop.csproj
+++ b/shop-desktop/shop-desktop.csproj
@@ -8,6 +8,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <UseWPF>true</UseWPF>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <EnableWindowsTargeting>true</EnableWindowsTargeting>
     </PropertyGroup>
 
     <ItemGroup>
