--- a/shop-desktop/Dockerfile
+++ b/shop-desktop/Dockerfile
@@ -1,1 +1,20 @@
-﻿
+﻿# Stage 1: Build the application
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+WORKDIR /src
+
+# Copy the project files and restore dependencies
+COPY . .
+RUN dotnet restore
+
+# Build the application
+RUN dotnet publish -c Release -o out
+
+# Stage 2: Create the runtime image
+FROM mcr.microsoft.com/dotnet/runtime:8.0 AS runtime
+WORKDIR /app
+
+# Copy the published application from the build stage
+COPY --from=build /src/out .
+
+# Set the entry point for the application
+ENTRYPOINT ["./shop-desktop.exe"]
